--- a/src/app/css/css_login.css
+++ b/src/app/css/css_login.css
@@ -9,7 +9,9 @@ body {
     background: var(--white-2, #F4F4F4);
     padding: 48px;
 }
-
+Link {
+    
+}
 
 /* Tipografia */
 
@@ -159,6 +161,7 @@ body {
     padding: 24px;
     justify-content: center;
     align-items: center;
+    text-decoration: none;
 
     border-radius: 20px;
     background: var(--primary-color-2, #A07BFC);
@@ -243,6 +246,9 @@ body {
         width: 100%;
         padding-right: 10px;
         padding-left: 10px;
+    }
+    .button_link {
+        width: 100%;
     }
 }
 
