--- a/src/app/css/css_home.css
+++ b/src/app/css/css_home.css
@@ -19,7 +19,7 @@ body {
 }
 
 .navbar {
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,6 +34,7 @@ body {
 }
 
 .itens-home {
+    z-index: 4;
     display: flex;
     flex-direction: column;
     align-items: center;
