--- a/src/app/css/css_home.css
+++ b/src/app/css/css_home.css
@@ -9,7 +9,7 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: start;
-    padding-left: 168px;
+    padding-left: 118px;
 }
 
 .app {
@@ -95,7 +95,6 @@ body {
 
     padding-top: 6px;
     color: var(--black-150, rgba(18, 18, 18, 0.50));
-    font-family: Gopher;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -403,3 +402,9 @@ body {
     border-radius: 100px;
     background: var(--primary-color-220, rgba(160, 123, 252, 0.20));
 }
+
+@media (max-width: 2860px) {
+    .section-top {
+
+    }
+  }
